mosfhet/mosfhet-sys/MOSFHET/include/mosfhet.h

typedef uint32_t Torus;
typedef uint64_t Torus;
/* Polynomials */
typedef struct {
  Torus * coeffs;
  int N;
} * TorusPolynomial;
typedef struct {
  double * coeffs;
  int N;
} * DFT_Polynomial;
typedef TorusPolynomial IntPolynomial;
typedef Torus Integer;
/* TLWE */
typedef struct {
  Torus * a, b;
  int n;
} * TLWE;
typedef struct {
  Integer * s;
  int n;
  double sigma;
} * TLWE_Key;
typedef struct {
  TLWE *** s;
  int base_bit, t, n;
} * TLWE_KS_Key;
/* TRLWE */
typedef struct {
  TorusPolynomial * a, b;
  int k;
} * TRLWE;
typedef struct {
  DFT_Polynomial * a, b;
  int k;
} * TRLWE_DFT;
typedef struct {
  IntPolynomial * s;
  int k;
  double sigma;
} * TRLWE_Key;
typedef struct {
  TRLWE_DFT ** s;
  int base_bit, t, k;
} * TRLWE_KS_Key;
typedef struct {
  TRLWE *** s;
  int base_bit, t, n, include_b;
} * Generic_KS_Key;
/* TRGSW */
typedef struct {
  TRLWE * samples;
  int l, Bg_bit;
} * TRGSW;
typedef struct {
  TRLWE_DFT * samples;
  int l, Bg_bit;
} * TRGSW_DFT;
typedef struct {
  TRLWE_Key trlwe_key;
  int l, Bg_bit;
} * TRGSW_Key;
void polynomial_permute(TorusPolynomial out, TorusPolynomial in, uint64_t gen);
void polynomial_add_DFT_polynomials(DFT_Polynomial out, DFT_Polynomial in1, DFT_Polynomial in2);
void polynomial_decompose_i(TorusPolynomial out, TorusPolynomial in, int Bg_bit, int l, int i);
/* TLWE */
TLWE_Key tlwe_alloc_key(int n, double sigma);
TLWE_Key tlwe_new_binary_key(int n, double sigma);
TLWE_Key tlwe_new_bounded_key(int n, uint64_t bound, double sigma);
TLWE_Key tlwe_load_new_key(FILE * fd);
TLWE_KS_Key tlwe_load_new_KS_key(FILE * fd);
void tlwe_save_KS_key(FILE * fd, TLWE_KS_Key key);
TLWE tlwe_alloc_sample(int n);
TLWE * tlwe_alloc_sample_array(int count, int n);
void tlwe_save_key(FILE * fd, TLWE_Key key);
TLWE tlwe_new_noiseless_trivial_sample(Torus m, int n);
void tlwe_noiseless_trivial_sample(TLWE out, Torus m);
void tlwe_sample(TLWE out, Torus m, TLWE_Key key);
void tlwe_copy(TLWE out, TLWE in);
TLWE tlwe_new_sample(Torus m, TLWE_Key key);
TLWE tlwe_load_new_sample(FILE * fd, int n);
void tlwe_load_sample(FILE * fd, TLWE c);
void tlwe_save_sample(FILE * fd, TLWE c);
TRLWE_DFT trlwe_load_new_DFT_sample(FILE * fd, int k, int N);
void trlwe_save_DFT_sample(FILE * fd, TRLWE_DFT c);
Torus tlwe_phase(TLWE c, TLWE_Key key);
void tlwe_add(TLWE out, TLWE in1, TLWE in2);
void tlwe_addto(TLWE out, TLWE in);
void tlwe_scale(TLWE out, TLWE in1, Torus in2);
void tlwe_scale_addto(TLWE out, TLWE in1, Torus in2);
void tlwe_sub(TLWE out, TLWE in1, TLWE in2);
void tlwe_subto(TLWE out, TLWE in);
void tlwe_negate(TLWE out, TLWE in);
TLWE_KS_Key tlwe_new_KS_key(TLWE_Key out_key, TLWE_Key in_key, int t, int base_bit);
void tlwe_keyswitch(TLWE out, TLWE in, TLWE_KS_Key ks_key);
void free_tlwe(TLWE p);
void free_tlwe_array(TLWE * p, int count);
void free_tlwe_key(TLWE_Key key);
void free_tlwe_ks_key(TLWE_KS_Key key);
void tlwe_mul(TLWE out, TLWE in1, TLWE in2, int delta, Generic_KS_Key ksk, TRLWE_KS_Key rlk);
/* TRLWE */
TRLWE_Key trlwe_alloc_key(int N, int k, double sigma);
TRLWE_Key trlwe_new_binary_key(int N, int k, double sigma);
TRLWE_Key trlwe_new_bounded_key(int N, int k, uint64_t bound, double sigma);
TRLWE_Key trlwe_load_new_key(FILE * fd);
void trlwe_save_key(FILE * fd, TRLWE_Key key);
TRLWE trlwe_alloc_new_sample(int k, int N);
TRLWE * trlwe_alloc_new_sample_array(int count, int k, int N);
TRLWE_DFT * trlwe_alloc_new_DFT_sample_array(int count, int k, int N);
TRLWE trlwe_load_new_sample(FILE * fd, int k, int N);
void trlwe_load_sample(FILE * fd, TRLWE c);
void trlwe_save_sample(FILE * fd, TRLWE c);
TRLWE trlwe_alloc_new_sample(int k, int N);
TRLWE_DFT trlwe_alloc_new_DFT_sample(int k, int N);
void trlwe_load_DFT_sample(FILE * fd, TRLWE_DFT c);
TRLWE trlwe_new_noiseless_trivial_sample(TorusPolynomial m, int k, int N);
void trlwe_noiseless_trivial_sample(TRLWE out, TorusPolynomial m);
TRLWE trlwe_new_sample(TorusPolynomial m, TRLWE_Key key);
void trlwe_sample(TRLWE out, TorusPolynomial m, TRLWE_Key key);
void trlwe_phase(TorusPolynomial out, TRLWE in, TRLWE_Key key);
void trlwe_from_DFT(TRLWE out, TRLWE_DFT in);
void trlwe_to_DFT(TRLWE_DFT out, TRLWE in);
void trlwe_decompose(TorusPolynomial * out, TRLWE in, int Bg_bit, int l);
void trlwe_add(TRLWE out, TRLWE in1, TRLWE in2);
void trlwe_addto(TRLWE out, TRLWE in);
void trlwe_sub(TRLWE out, TRLWE in1, TRLWE in2);
void trlwe_DFT_sub(TRLWE_DFT out, TRLWE_DFT in1,  TRLWE_DFT in2);
void trgsw_DFT_add(TRGSW_DFT out, TRGSW_DFT in1, TRGSW_DFT in2);
void trlwe_subto(TRLWE out, TRLWE in);
void trlwe_DFT_mul_by_polynomial(TRLWE_DFT out, TRLWE_DFT in, DFT_Polynomial in2);
void trlwe_DFT_mul_addto_by_polynomial(TRLWE_DFT out, TRLWE_DFT in, DFT_Polynomial in2);
void trlwe_mul_by_xai(TRLWE out, TRLWE in, int a);
void trlwe_mul_by_xai_addto(TRLWE out, TRLWE in, int a);
void trlwe_mul_by_xai_minus_1(TRLWE out, TRLWE in, int a);
void trlwe_extract_tlwe(TLWE out, TRLWE in, int idx);
void trlwe_extract_tlwe_key(TLWE_Key out, TRLWE_Key in);
void trlwe_mv_extract_tlwe(TLWE * out, TRLWE in, int amount);
void trlwe_mv_extract_tlwe_scaling(TLWE out, TRLWE in, int scale);
void trlwe_mv_extract_tlwe_scaling_addto(TLWE out, TRLWE in, int scale);
void trlwe_mv_extract_tlwe_scaling_subto(TLWE out, TRLWE in, int scale);
void trlwe_copy(TRLWE out, TRLWE in);
void trlwe_negate(TRLWE out, TRLWE in);
void trlwe_DFT_copy(TRLWE_DFT out, TRLWE_DFT in);
void free_trlwe(void * p_v);
void free_trlwe_array(void * p_v, int count);
void free_trlwe_key(TRLWE_Key key);
void trlwe_DFT_add(TRLWE_DFT out, TRLWE_DFT in1,  TRLWE_DFT in2);
void trlwe_DFT_addto(TRLWE_DFT out, TRLWE_DFT in);
void trlwe_noiseless_trivial_DFT_sample(TRLWE_DFT out, DFT_Polynomial m);
TRLWE_DFT trlwe_new_noiseless_trivial_DFT_sample(DFT_Polynomial m, int k, int N);
void trlwe_tensor_prod(TRLWE out, TRLWE in1, TRLWE in2, int delta, TRLWE_KS_Key rl_key);
void trlwe_tensor_prod_FFT(TRLWE out, TRLWE in1, TRLWE in2, int precision, TRLWE_KS_Key rl_key);
void trlwe_torus_packing_many_LUT(TRLWE out, Torus * in, int lut_size, int n_luts);
void trlwe_eval_automorphism(TRLWE out, TRLWE in, uint64_t gen, TRLWE_KS_Key ks_key);
/* TRLWE Compressed */
TRLWE trlwe_new_compressed_sample(TorusPolynomial m, TRLWE_Key key);
TRLWE trlwe_load_new_compressed_sample(FILE * fd, int k, int N);
void trlwe_load_compressed_sample(FILE * fd, TRLWE c);
void trlwe_save_compressed_sample(FILE * fd, TRLWE c);
void trlwe_compressed_subto(TRLWE out, TRLWE in);
void trlwe_compressed_DFT_sample(TRLWE_DFT out, TorusPolynomial m, TRLWE_Key key);
TRLWE_DFT trlwe_new_compressed_DFT_sample(TorusPolynomial m, TRLWE_Key key);
void trlwe_compressed_DFT_mul_addto(TRLWE_DFT out, DFT_Polynomial in1, TRLWE_DFT in2);
/* TRGSW */
TRGSW_Key trgsw_new_key(TRLWE_Key trlwe_key, int l, int Bg_bit);
void trgsw_save_key(FILE * fd, TRGSW_Key key);
TRGSW_Key trgsw_load_new_key(FILE * fd);
TRGSW trgsw_alloc_new_sample(int l, int Bg_bit, int k, int N);
TRGSW * trgsw_alloc_new_sample_array(int count, int l, int Bg_bit, int k, int N);
TRGSW_DFT trgsw_alloc_new_DFT_sample(int l, int Bg_bit, int k, int N);
TRGSW_DFT * trgsw_alloc_new_DFT_sample_array(int count, int l, int Bg_bit, int k, int N);
TRGSW trgsw_new_noiseless_trivial_sample(Torus m, int l, int Bg_bit, int k, int N);
void trgsw_noiseless_trivial_sample(TRGSW out, Torus m, int l, int Bg_bit, int k, int N);
TRGSW trgsw_new_monomial_sample(int64_t m, int e, TRGSW_Key key);
void trgsw_monomial_sample(TRGSW out, int64_t m, int e, TRGSW_Key key);
TRGSW trgsw_new_sample(Torus m, TRGSW_Key key);
TRGSW trgsw_new_exp_sample(int e, TRGSW_Key key);