mosfhet/mosfhet-sys/src/bindings.rs

extern "C" {
    pub fn polynomial_permute(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        gen: u64,
    );
}
extern "C" {
    pub fn polynomial_add_DFT_polynomials(
        out: DFT_Polynomial,
        in1: DFT_Polynomial,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn polynomial_decompose_i(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        Bg_bit: ::libc::c_int,
        l: ::libc::c_int,
        i: ::libc::c_int,
    );
}
extern "C" {
    pub fn tlwe_alloc_key(n: ::libc::c_int, sigma: f64) -> TLWE_Key;
}
extern "C" {
    pub fn tlwe_new_binary_key(n: ::libc::c_int, sigma: f64) -> TLWE_Key;
}
extern "C" {
    pub fn tlwe_new_bounded_key(
        n: ::libc::c_int,
        bound: u64,
        sigma: f64,
    ) -> TLWE_Key;
}
extern "C" {
    pub fn tlwe_load_new_key(fd: *mut FILE) -> TLWE_Key;
}
extern "C" {
    pub fn tlwe_load_new_KS_key(fd: *mut FILE) -> TLWE_KS_Key;
}
extern "C" {
    pub fn tlwe_save_KS_key(fd: *mut FILE, key: TLWE_KS_Key);
}
extern "C" {
    pub fn tlwe_alloc_sample(n: ::libc::c_int) -> TLWE;
}
extern "C" {
    pub fn tlwe_alloc_sample_array(
        count: ::libc::c_int,
        n: ::libc::c_int,
    ) -> *mut TLWE;
}
extern "C" {
    pub fn tlwe_save_key(fd: *mut FILE, key: TLWE_Key);
}
extern "C" {
    pub fn tlwe_new_noiseless_trivial_sample(
        m: Torus,
        n: ::libc::c_int,
    ) -> TLWE;
}
extern "C" {
    pub fn tlwe_noiseless_trivial_sample(out: TLWE, m: Torus);
}
extern "C" {
    pub fn tlwe_sample(out: TLWE, m: Torus, key: TLWE_Key);
}
extern "C" {
    pub fn tlwe_copy(out: TLWE, in_: TLWE);
}
extern "C" {
    pub fn tlwe_new_sample(m: Torus, key: TLWE_Key) -> TLWE;
}
extern "C" {
    pub fn tlwe_load_new_sample(fd: *mut FILE, n: ::libc::c_int) -> TLWE;
}
extern "C" {
    pub fn tlwe_load_sample(fd: *mut FILE, c: TLWE);
}
extern "C" {
    pub fn tlwe_save_sample(fd: *mut FILE, c: TLWE);
}
extern "C" {
    pub fn trlwe_load_new_DFT_sample(
        fd: *mut FILE,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE_DFT;
}
extern "C" {
    pub fn trlwe_save_DFT_sample(fd: *mut FILE, c: TRLWE_DFT);
}
extern "C" {
    pub fn tlwe_phase(c: TLWE, key: TLWE_Key) -> Torus;
}
extern "C" {
    pub fn tlwe_add(out: TLWE, in1: TLWE, in2: TLWE);
}
extern "C" {
    pub fn tlwe_addto(out: TLWE, in_: TLWE);
}
extern "C" {
    pub fn tlwe_scale(out: TLWE, in1: TLWE, in2: Torus);
}
extern "C" {
    pub fn tlwe_scale_addto(out: TLWE, in1: TLWE, in2: Torus);
}
extern "C" {
    pub fn tlwe_sub(out: TLWE, in1: TLWE, in2: TLWE);
}
extern "C" {
    pub fn tlwe_subto(out: TLWE, in_: TLWE);
}
extern "C" {
    pub fn tlwe_negate(out: TLWE, in_: TLWE);
}
extern "C" {
    pub fn tlwe_new_KS_key(
        out_key: TLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> TLWE_KS_Key;
}
extern "C" {
    pub fn tlwe_keyswitch(out: TLWE, in_: TLWE, ks_key: TLWE_KS_Key);
}
extern "C" {
    pub fn free_tlwe(p: TLWE);
}
extern "C" {
    pub fn free_tlwe_array(p: *mut TLWE, count: ::libc::c_int);
}
extern "C" {
    pub fn free_tlwe_key(key: TLWE_Key);
}
extern "C" {
    pub fn free_tlwe_ks_key(key: TLWE_KS_Key);
}
extern "C" {
    pub fn tlwe_mul(
        out: TLWE,
        in1: TLWE,
        in2: TLWE,
        delta: ::libc::c_int,
        ksk: Generic_KS_Key,
        rlk: TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_alloc_key(
        N: ::libc::c_int,
        k: ::libc::c_int,
        sigma: f64,
    ) -> TRLWE_Key;
}
extern "C" {
    pub fn trlwe_new_binary_key(
        N: ::libc::c_int,
        k: ::libc::c_int,
        sigma: f64,
    ) -> TRLWE_Key;
}
extern "C" {
    pub fn trlwe_new_bounded_key(
        N: ::libc::c_int,
        k: ::libc::c_int,
        bound: u64,
        sigma: f64,
    ) -> TRLWE_Key;
}
extern "C" {
    pub fn trlwe_load_new_key(fd: *mut FILE) -> TRLWE_Key;
}
extern "C" {
    pub fn trlwe_save_key(fd: *mut FILE, key: TRLWE_Key);
}
extern "C" {
    pub fn trlwe_alloc_new_sample(k: ::libc::c_int, N: ::libc::c_int) -> TRLWE;
}
extern "C" {
    pub fn trlwe_alloc_new_sample_array(
        count: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> *mut TRLWE;
}
extern "C" {
    pub fn trlwe_alloc_new_DFT_sample_array(
        count: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> *mut TRLWE_DFT;
}
extern "C" {
    pub fn trlwe_load_new_sample(
        fd: *mut FILE,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE;
}
extern "C" {
    pub fn trlwe_load_sample(fd: *mut FILE, c: TRLWE);
}
extern "C" {
    pub fn trlwe_save_sample(fd: *mut FILE, c: TRLWE);
}
extern "C" {
    pub fn trlwe_alloc_new_DFT_sample(
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE_DFT;
}
extern "C" {
    pub fn trlwe_load_DFT_sample(fd: *mut FILE, c: TRLWE_DFT);
}
extern "C" {
    pub fn trlwe_new_noiseless_trivial_sample(
        m: TorusPolynomial,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE;
}
extern "C" {
    pub fn trlwe_noiseless_trivial_sample(out: TRLWE, m: TorusPolynomial);
}
extern "C" {
    pub fn trlwe_new_sample(m: TorusPolynomial, key: TRLWE_Key) -> TRLWE;
}
extern "C" {
    pub fn trlwe_sample(out: TRLWE, m: TorusPolynomial, key: TRLWE_Key);
}
extern "C" {
    pub fn trlwe_phase(out: TorusPolynomial, in_: TRLWE, key: TRLWE_Key);
}
extern "C" {
    pub fn trlwe_from_DFT(out: TRLWE, in_: TRLWE_DFT);
}
extern "C" {
    pub fn trlwe_to_DFT(out: TRLWE_DFT, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_decompose(
        out: *mut TorusPolynomial,
        in_: TRLWE,
        Bg_bit: ::libc::c_int,
        l: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_add(out: TRLWE, in1: TRLWE, in2: TRLWE);
}
extern "C" {
    pub fn trlwe_addto(out: TRLWE, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_sub(out: TRLWE, in1: TRLWE, in2: TRLWE);
}
extern "C" {
    pub fn trlwe_DFT_sub(out: TRLWE_DFT, in1: TRLWE_DFT, in2: TRLWE_DFT);
}
extern "C" {
    pub fn trgsw_DFT_add(out: TRGSW_DFT, in1: TRGSW_DFT, in2: TRGSW_DFT);
}
extern "C" {
    pub fn trlwe_subto(out: TRLWE, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_DFT_mul_by_polynomial(
        out: TRLWE_DFT,
        in_: TRLWE_DFT,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn trlwe_DFT_mul_addto_by_polynomial(
        out: TRLWE_DFT,
        in_: TRLWE_DFT,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn trlwe_mul_by_xai(out: TRLWE, in_: TRLWE, a: ::libc::c_int);
}
extern "C" {
    pub fn trlwe_mul_by_xai_addto(out: TRLWE, in_: TRLWE, a: ::libc::c_int);
}
extern "C" {
    pub fn trlwe_mul_by_xai_minus_1(out: TRLWE, in_: TRLWE, a: ::libc::c_int);
}
extern "C" {
    pub fn trlwe_extract_tlwe(out: TLWE, in_: TRLWE, idx: ::libc::c_int);
}
extern "C" {
    pub fn trlwe_extract_tlwe_key(out: TLWE_Key, in_: TRLWE_Key);
}
extern "C" {
    pub fn trlwe_mv_extract_tlwe(
        out: *mut TLWE,
        in_: TRLWE,
        amount: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_mv_extract_tlwe_scaling(
        out: TLWE,
        in_: TRLWE,
        scale: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_mv_extract_tlwe_scaling_addto(
        out: TLWE,
        in_: TRLWE,
        scale: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_mv_extract_tlwe_scaling_subto(
        out: TLWE,
        in_: TRLWE,
        scale: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_copy(out: TRLWE, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_negate(out: TRLWE, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_DFT_copy(out: TRLWE_DFT, in_: TRLWE_DFT);
}
extern "C" {
    pub fn free_trlwe(p_v: *mut ::libc::c_void);
}
extern "C" {
    pub fn free_trlwe_array(p_v: *mut ::libc::c_void, count: ::libc::c_int);
}
extern "C" {
    pub fn free_trlwe_key(key: TRLWE_Key);
}
extern "C" {
    pub fn trlwe_DFT_add(out: TRLWE_DFT, in1: TRLWE_DFT, in2: TRLWE_DFT);
}
extern "C" {
    pub fn trlwe_DFT_addto(out: TRLWE_DFT, in_: TRLWE_DFT);
}
extern "C" {
    pub fn trlwe_noiseless_trivial_DFT_sample(
        out: TRLWE_DFT,
        m: DFT_Polynomial,
    );
}
extern "C" {
    pub fn trlwe_new_noiseless_trivial_DFT_sample(
        m: DFT_Polynomial,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE_DFT;
}
extern "C" {
    pub fn trlwe_tensor_prod(
        out: TRLWE,
        in1: TRLWE,
        in2: TRLWE,
        delta: ::libc::c_int,
        rl_key: TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_tensor_prod_FFT(
        out: TRLWE,
        in1: TRLWE,
        in2: TRLWE,
        precision: ::libc::c_int,
        rl_key: TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_torus_packing_many_LUT(
        out: TRLWE,
        in_: *mut Torus,
        lut_size: ::libc::c_int,
        n_luts: ::libc::c_int,
    );
}
extern "C" {
    pub fn trlwe_eval_automorphism(
        out: TRLWE,
        in_: TRLWE,
        gen: u64,
        ks_key: TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_new_compressed_sample(
        m: TorusPolynomial,
        key: TRLWE_Key,
    ) -> TRLWE;
}
extern "C" {
    pub fn trlwe_load_new_compressed_sample(
        fd: *mut FILE,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRLWE;
}
extern "C" {
    pub fn trlwe_load_compressed_sample(fd: *mut FILE, c: TRLWE);
}
extern "C" {
    pub fn trlwe_save_compressed_sample(fd: *mut FILE, c: TRLWE);
}
extern "C" {
    pub fn trlwe_compressed_subto(out: TRLWE, in_: TRLWE);
}
extern "C" {
    pub fn trlwe_compressed_DFT_sample(
        out: TRLWE_DFT,
        m: TorusPolynomial,
        key: TRLWE_Key,
    );
}
extern "C" {
    pub fn trlwe_new_compressed_DFT_sample(
        m: TorusPolynomial,
        key: TRLWE_Key,
    ) -> TRLWE_DFT;
}
extern "C" {
    pub fn trlwe_compressed_DFT_mul_addto(
        out: TRLWE_DFT,
        in1: DFT_Polynomial,
        in2: TRLWE_DFT,
    );
}
extern "C" {
    pub fn trgsw_new_key(
        trlwe_key: TRLWE_Key,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
    ) -> TRGSW_Key;
}
extern "C" {
    pub fn trgsw_save_key(fd: *mut FILE, key: TRGSW_Key);
}
extern "C" {
    pub fn trgsw_load_new_key(fd: *mut FILE) -> TRGSW_Key;
}
extern "C" {
    pub fn trgsw_alloc_new_sample(
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW;
}
extern "C" {
    pub fn trgsw_alloc_new_sample_array(
        count: ::libc::c_int,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> *mut TRGSW;
}
extern "C" {
    pub fn trgsw_alloc_new_DFT_sample(
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW_DFT;
}
extern "C" {
    pub fn trgsw_alloc_new_DFT_sample_array(
        count: ::libc::c_int,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> *mut TRGSW_DFT;
}
extern "C" {
    pub fn trgsw_new_noiseless_trivial_sample(
        m: Torus,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW;
}
extern "C" {
    pub fn trgsw_noiseless_trivial_sample(
        out: TRGSW,
        m: Torus,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    );
}
extern "C" {
    pub fn trgsw_new_monomial_sample(
        m: i64,
        e: ::libc::c_int,
        key: TRGSW_Key,
    ) -> TRGSW;
}
extern "C" {
    pub fn trgsw_monomial_sample(
        out: TRGSW,
        m: i64,
        e: ::libc::c_int,
        key: TRGSW_Key,
    );
}
extern "C" {
    pub fn trgsw_new_sample(m: Torus, key: TRGSW_Key) -> TRGSW;
}
extern "C" {
    pub fn trgsw_new_exp_sample(e: ::libc::c_int, key: TRGSW_Key) -> TRGSW;
}
